fixed broken css

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -751,7 +751,7 @@ body {
         border: 1px solid darken(@color-swatch1,10%);
         background-color: #ffffff;
         color: rgb(65,65,65)!important;
-        width: 70%
+        width: 70%;
     }
 
 
